@@ -1,5 +1,10 @@
 {{$NEXT}}
 
+Features:
+* New feature 'morphpos' (it existed in Interset 1 for sk::snk but it did not make it to Interset 2 so far).
+
+
+
 2.008     2014-08-01 11:14:23+02:00 Europe/Prague
 
 Drivers:
